resources/k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{service}#
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    app: #{project-name}#
    pod: #{service}#-pod
  ports:
    - name: #{service}#-port
      targetPort: #{container-port}#
      port: #{service-port}#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{service}#-deployment
  namespace: #{namespace}#
  labels:
    app: #{project-name}#
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  replicas: #{replicas}#
  selector:
    matchLabels:
      pod: #{service}#-pod
  template:
    metadata:
      labels:
        app: #{project-name}#
        pod: #{service}#-pod
        app.bancolombia.com.co/project: #{project-name}#
      #annotations:
        #metrics.dynatrace.com/scrape: 'true'
        #metrics.dynatrace.com/port: #{prometheus-port}#
        #metrics.dynatrace.com/secure: #{prometheus-tls}#
        #metrics.dynatrace.com/path: #{prometheus-path}#
        #prometheus.io/port: #{prometheus-port}#
        #prometheus.io/path: #{prometheus-path}#
        #prometheus.io/scrape: 'true'
    spec:
      serviceAccountName: #{project-name}#-iam-sa
      hostAliases:
      - ip: '#{ip-service-os}#'
        hostnames:
        - '#{dns-service-os}#'
      containers:
        - name: #{service}#-container
          image: #{image}#
          ports:
            - containerPort: #{container-port}#
          readinessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              httpHeaders:
                - name: Content-Type
                  value: application/json
              port: #{container-port}#
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              httpHeaders:
                - name: Content-Type
                  value: application/json
              port: #{container-port}#
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: #{requests-cpu}#
              memory: #{requests-memory}#
            limits:
              cpu: #{requests-cpu-max}#
          volumeMounts:
            - name: #{service}#-volume-config
              mountPath: "/app/rel/fua/etc"
              readOnly: true
      volumes:
        - name: #{service}#-volume-config
          configMap:
            name: #{service}#-configmap
