resources/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: #{app-gateway}#
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: #{service-port}#
        name: #{service}#-port
        protocol: #{app-gateway-protocol}#
      hosts:
        - '#{gateway-host}#'
        - '#{gateway-internal-host}#'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: #{service}#-vs
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  hosts:
    - '#{gateway-host}#'
    - '#{gateway-internal-host}#'
  gateways:
    - #{app-gateway}#
  http:
    - match:
        - uri:
            prefix: '#{path-prefix}#'
      rewrite:
        uri: '#{path-rewrite}#'
      route:
        - destination:
            host: #{service}#
            port:
              number: #{service-port}#
